--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <li>
                             <a href="#" class="gnb_title">Brand</a>
                             <ul class="dropdown-nav">
-                                <li><a href="">소개</a></li>
+                                <li><a href="sub_02.html">소개</a></li>
                                 <li><a href="">연혁</a></li>
                                 <li><a href="">BI</a></li>
                                 <li><a href="">매장안내</a></li>
