--- a/sub_02.html
+++ b/sub_02.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/sub_01.css">
+    <link rel="stylesheet" href="css/sub_02.css">
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <title>Haagen-Dazs Menu</title>
 </head>
@@ -69,8 +69,9 @@
                     </ul>
                     <p>
                         <a href="" class="login">login</a>
-                        <a href="#" class="hamburger" aria-label="메뉴 열기" aria-expanded="false"><img
-                                src="image/hamburger.png" alt="menu" /></a>
+                        <a href="#" class="hamburger" aria-label="메뉴 열기" aria-expanded="false">
+                            <img src="image/hamburger.png" alt="menu">
+                        </a>
                     </p>
                     <div class="mobile-menu" aria-hidden="true">
                         <ul class="gnb-mobile"></ul>
@@ -80,101 +81,60 @@
             </div>
         </div>
         <div class="visual">
-            <h2>Menu</h2>
-            <img src="image/visual_01.png" alt="visual" />
+            <div class="visual_text">
+                <h2>A Spoonful of Luxury</h2>
+                <p>한 스푼의 럭셔리, 하겐다즈 신선한 크림과 천연 재료로 완성된 진한 아이스크림으로 나만의 여유를 즐기세요</p>
+            </div>
         </div>
     </header>
 
     <main>
-        <div class="store_sellect">
-            <ul class="store_sellect_warp">
-                <li class="online active" id="online"><a href="#">Online Store</a></li>
-                <li class="offline" id="offline"><a href="#">Offline Store</a></li>
-            </ul>
-        </div>
-
-        <div class="Menu_sellect online_category">
-            <ul class="Menu_sellect_warp">
-                <li class="cup_menu active"><a href="#">Cup <p>Icecream</p></a></li>
-                <li class="bar_menu"><a href="#">Bar <p>Icecream</p></a></li>
-                <li class="sand_menu"><a href="#">Sand&Cone <p>Icecream</p></a></li>
-                <li class="cake_menu"><a href="#">
-                        <p>Icecream</p> Cake
-                    </a></li>
-            </ul>
-        </div>
-
-        <div class="Menu_sellect offline_category" style="display:none;">
-            <ul class="Menu_sellect_warp">
-                <li class="creation_menu active"><a href="#">Creation Menu</a></li>
-                <li class="drink_menu"><a href="#">Icecream Drink</a></li>
-            </ul>
-        </div>
-
-        <div class="Menu_list online_menu">
-            <div class="menu_list_warp">
-                <ul class="cup_Icecream_menu" id="cup">
-                    <li><a href="#"><img src="image/cup_04.png" alt="쿠키 앤 초콜릿 파인트" />
-                            <p>쿠키 앤 초콜릿 [파인트]</p>
-                        </a></li>
-                    <li><a href="#"><img src="image/cup_05.png" alt="쿠키 앤 그린티 파인트" />
-                            <p>쿠키 앤 그린티 [파인트]</p>
-                        </a></li>
-                    <li class="cup_small"><a href="#"><img src="image/cup_01.png" alt="쿠키 앤 그린티 미니컵" />
-                            <p>쿠키 앤 그린티 [미니컵]</p>
-                        </a></li>
-                    <li class="cup_small"><a href="#"><img src="image/cup_02.png" alt="마드리드 츄로스 미니컵" />
-                            <p>마드리드 츄로스 [미니컵]</p>
-                        </a></li>
-                    <li class="cup_small"><a href="#"><img src="image/cup_03.png" alt="로마 티라미수 미니컵" />
-                            <p>로마 티라미수 [미니컵]</p>
-                        </a></li>
-                    <li><a href="#"><img src="image/cup_08.png" alt="마드리드 츄로스 파인트" />
-                            <p>마드리드 츄로스 [파인트]</p>
-                        </a></li>
-                    <li><a href="#"><img src="image/cup_07.png" alt="로마 티라미수 파인트" />
-                            <p>로마 티라미수 [파인트]</p>
-                        </a></li>
-                    <li><a href="#"><img src="image/cup_06.png" alt="블루베리 앤 크림 파인트" />
-                            <p>블루베리 앤 크림 [파인트]</p>
-                        </a></li>
-                </ul>
-            </div>
-            <div class="number">
-                <ul>
-                    <li><img src="image/arrow_left_small.png"></li>
-                    <li><b>1</b></li>
-                    <li>2</li>
-                    <li>3</li>
-                    <li><img src="image/arrow_right_small.png"></li>
-                </ul>
+        <div class="About_warp">
+            <div class="About">
+                <div class="About_title">
+                    <h3>Haagen-Dazs About</h3>
+                    <span></span>
+                    <span></span>
+                </div>
+                <div class="About_text">
+                    <h4>맛이 아닌 경험을 위해</h4>
+                    <p>
+                        하겐다즈는 처음부터 순수한 재료로 완벽한 맛을 만든다는 철학을 지켜왔습니다. <br>
+                        크림, 우유, 달걀, 설탕 단 네 가지 재료로 하루를 특별하게 만듭니다. <br>
+                        초콜릿, 카라멜, 딸기, 바닐라 같은 대표적인 맛도 인공 향료나 색소 없이, 단순하지만 깊은 맛을 전합니다. <br>
+                        단순한 재료로도 마법 같은 순간이 펼쳐질 수 있다는 걸 보여주는 브랜드, 그게 바로 하겐다즈입니다. </p>
+                </div>
+                <img src="image/about_01.jpeg">
             </div>
         </div>
-
-        <div class="Menu_list offline_menu" style="display:none;">
-            <div class="menu_list_warp">
-                <ul class="creation_menu_list" id="creation">
-                    <li class="img_small"><a href="#"><img src="image/dessert_01.png" alt="쿠키&크림 파르페 크런치" />
-                            <p>쿠키&크림 파르페 크런치</p>
-                        </a></li>
-                    <li class="img_small"><a href="#"><img src="image/dessert_02.png" alt="요거트 파르페 크런치" />
-                            <p>요거트 파르페 크런치</p>
-                        </a></li>
-                    <li class="img_small"><a href="#"><img src="image/dessert_04.png" alt="소이 빈 파르페 크런치" />
-                            <p>소이 빈 파르페 크런치</p>
-                        </a></li>
-                    <li><a href="#"><img src="image/dessert_03.png" alt="와플 드림" />
-                            <p>와플 드림</p>
-                        </a></li>
-                </ul>
+        <div class="about_middle_warp">
+            <div class="about_middle">
+                <img src="image/about_02.png">
+                <div class="about_middle_text">
+                    <h4>한 입의 사치, 그 이상의 경험</h4>
+                    <p>
+                        1960년 뉴욕 브롱크스의 작은 공장에서 창립자 Reuben Mattus는 <br>
+                        그의 아이스크림은 짧은 순간에도 깊은 여운을 남기는 프리미엄 경험이 되었습니다. <br>
+                        ‘Haagen-Dazs’라는 이름은 북유럽의 감성과 장인의 품격을 담기 위해 창조된 이름으로 <br>
+                        그 안에는 정성, 품격, 그리고 진정한 맛에 대한 고집이 녹아 있습니다. <br>
+                        지금도 하겐다즈는 한 입의 풍미로 일상을 특별하게 바꿉니다.
+                    </p>
+                </div>
             </div>
-            <div class="number">
-                <ul>
-                    <li><img src="image/arrow_left_small.png"></li>
-                    <li><b>1</b></li>
-                    <li>2</li>
-                    <li><img src="image/arrow_right_small.png"></li>
-                </ul>
+        </div>
+        <div class="about_bottom_warp">
+            <div class="about_bottom">
+                <div class="about_bottom_text">
+                    <h4>하겐다즈 매장에서 만나는 특별한 순간</h4>
+                    <p>
+                        하겐다즈 매장에서는 어디에서도 맛볼 수 없는 시즈널 스페셜 메뉴와<br>
+                        20가지가 넘는 크리에이션 메뉴, 그리고 다양한 프리미엄 드링크를 즐기실 수 있습니다.<br>
+                        매장에서만 경험할 수 있는 독창적인 레시피와<br>
+                        하겐다즈만의 깊은 풍미가 어우러져 당신의 하루에 특별한 여운을 더합니다.<br>
+                        또한 하겐다즈 아이스크림 케이크는 소중한 날을 더욱 특별하게 만들어줍니다.
+                    </p>
+                </div>
+                <img src="image/about_03.png">
             </div>
         </div>
     </main>
@@ -265,60 +225,6 @@
                     if (el !== li) el.classList.remove('active');
                 });
                 li.classList.toggle('active');
-            });
-
-            // 3) Online / Offline 탭
-            const storeBtns = document.querySelectorAll('.store_sellect_warp li');
-            const onlineCategory = document.querySelector('.online_category');
-            const offlineCategory = document.querySelector('.offline_category');
-            const onlineMenu = document.querySelector('.online_menu');
-            const offlineMenu = document.querySelector('.offline_menu');
-
-            const onlineMenus = onlineMenu ? onlineMenu.querySelectorAll('.menu_list_warp ul') : [];
-            const offlineMenus = offlineMenu ? offlineMenu.querySelectorAll('.menu_list_warp ul') : [];
-
-            function hideAllMenus() {
-                onlineMenus.forEach(menu => menu.style.display = 'none');
-                offlineMenus.forEach(menu => menu.style.display = 'none');
-            }
-            function showOnlineMenu(menuSelector) {
-                if (!onlineCategory || !offlineCategory || !onlineMenu || !offlineMenu) return;
-                onlineCategory.style.display = 'block';
-                offlineCategory.style.display = 'none';
-                onlineMenu.style.display = 'block';
-                offlineMenu.style.display = 'none';
-                hideAllMenus();
-                const target = onlineMenu.querySelector(menuSelector);
-                if (target) target.style.display = 'flex';
-                storeBtns.forEach(b => b.classList.remove('active'));
-                const onlineBtn = document.querySelector('.store_sellect_warp .online');
-                if (onlineBtn) onlineBtn.classList.add('active');
-                window.scrollTo({ top: 0, behavior: 'smooth' });
-            }
-            function showOfflineMenu(menuSelector) {
-                if (!onlineCategory || !offlineCategory || !onlineMenu || !offlineMenu) return;
-                onlineCategory.style.display = 'none';
-                offlineCategory.style.display = 'block';
-                onlineMenu.style.display = 'none';
-                offlineMenu.style.display = 'block';
-                hideAllMenus();
-                const target = offlineMenu.querySelector(menuSelector);
-                if (target) target.style.display = 'flex';
-                storeBtns.forEach(b => b.classList.remove('active'));
-                const offlineBtn = document.querySelector('.store_sellect_warp .offline');
-                if (offlineBtn) offlineBtn.classList.add('active');
-                window.scrollTo({ top: 0, behavior: 'smooth' });
-            }
-
-            storeBtns.forEach(btn => {
-                btn.addEventListener('click', function (e) {
-                    e.preventDefault();
-                    if (btn.classList.contains('online')) {
-                        showOnlineMenu('.cup_Icecream_menu');
-                    } else {
-                        showOfflineMenu('.creation_menu_list');
-                    }
-                });
             });
 
             // 4) Top 버튼
