--- a/sub_02.html
+++ b/sub_02.html
@@ -22,7 +22,7 @@
                     </h1>
                     <ul class="gnb">
                         <li>
-                            <a href="#" class="gnb_title">Brand</a>
+                            <a href="sub_02.html" class="gnb_title">Brand</a>
                             <ul class="dropdown-nav">
                                 <li><a href="sub_02.html">소개</a></li>
                                 <li><a href="">연혁</a></li>
@@ -56,14 +56,14 @@
                         <li>
                             <a href="#" class="gnb_title">News</a>
                             <ul class="dropdown-nav">
-                                <li><a>이벤트</a></li>
-                                <li><a>공지사항</a></li>
+                                <li><a href="#">이벤트</a></li>
+                                <li><a href="#">공지사항</a></li>
                             </ul>
                         </li>
                         <li>
                             <a href="#" class="gnb_title">B2B</a>
                             <ul class="dropdown-nav">
-                                <li><a>비즈니스 파트너</a></li>
+                                <li><a href="#">비즈니스 파트너</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -104,7 +104,7 @@
                         초콜릿, 카라멜, 딸기, 바닐라 같은 대표적인 맛도 인공 향료나 색소 없이, 단순하지만 깊은 맛을 전합니다. <br>
                         단순한 재료로도 마법 같은 순간이 펼쳐질 수 있다는 걸 보여주는 브랜드, 그게 바로 하겐다즈입니다. </p>
                 </div>
-                <img src="image/about_01.jpeg">
+                <img src="image/about_04.png">
             </div>
         </div>
         <div class="about_middle_warp">
