--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="송혜린_하겐다즈">
     <meta property="og:description" content="uiux_10/13_하겐다즈">
     <meta property="og:url" content="https://sonn08120-png.github.io/haagendazs/">
-    <title>Haagen-Dazs</title>
+    <title>Haagen-Dazs main</title>
 
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/slider.css">
@@ -149,11 +149,11 @@
                     <li><span>Cake</span></li>
                 </ul>
                 <ul class="menu_list">
-                    <li><img src="image/cup_01.png" data-name="cup_01" alt="Cup Icecream"></li>
-                    <li><img src="image/cup_02.png" data-name="cup_02" alt="Cup Icecream"></li>
-                    <li><img src="image/cup_03.png" data-name="cup_03" alt="Cup Icecream"></li>
-                    <li><img src="image/cup_04.png" data-name="cup_04" alt="Cup Icecream"></li>
-                    <li><img src="image/cup_05.png" data-name="cup_05" alt="Cup Icecream"></li>
+                    <li><img src="image/cup_01.png"></li>
+                    <li><img src="image/cup_02.png"></li>
+                    <li><img src="image/cup_03.png"></li>
+                    <li><img src="image/cup_04.png"></li>
+                    <li><img src="image/cup_05.png"></li>
                 </ul>
                 <a href="sub_01.html#online"><p>more<img src="image/circle.png" alt=""></p></a>
             </div>
@@ -176,10 +176,10 @@
                     <li><span>Icecream Drink</span></li>
                 </ul>
                 <ul class="store_menu_list">
-                    <li><img src="image/dessert_01.png" alt="Icecream Drink"></li>
-                    <li><img src="image/dessert_02.png" alt="Icecream Drink"></li>
-                    <li><img src="image/dessert_03.png" alt="Icecream Drink"></li>
-                    <li><img src="image/dessert_04.png" alt="Icecream Drink"></li>
+                    <li><img src="image/dessert_01.png"></li>
+                    <li><img src="image/dessert_02.png"></li>
+                    <li><img src="image/dessert_04.png"></li>
+                    <li><img src="image/dessert_03.png"></li>
                 </ul>
                 <a href="sub_01.html#offline"><p>more<img src="image/circle.png" alt=""></p></a>
             </div>
