--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="송혜린_하겐다즈">
     <meta property="og:description" content="uiux_10/13_하겐다즈">
     <meta property="og:url" content="https://sonn08120-png.github.io/haagendazs/">
-    <title>Haagen-Dazs main</title>
+    <title>Haagen-Dazs Main</title>
 
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/slider.css">
